# aicyclingcoach-go

./: ASCII_Chart_Visualization_Details.md  ASCII_Chart_Visualization_TODO.md  ActivityListDesign.md  CL_ImplementationGuide_1.md  CL_LLMPromptforAnalysis.md  CL_backendfixes.md  CL_frontendfixes.md  CL_implementation_guide.md  CL_plan.md  Help_System_Implementation_TODO.md  MANIFEST.in  Makefile  README.md  designdoc.md  docker-compose.prod.yml  docker-compose.yml  export_import_api_spec.md  export_import_frontend_spec.md  go.mod  go.sum  install.sh  main.py  mode-analysis_workflow_integration-readme.md  mode-analysis_workflow_integration.md  mode-ascii_chart_visualization-readme.md  mode-ascii_chart_visualization.md  mode-help_system_implementation-readme.md  mode-help_system_implementation.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
backend/: Dockerfile  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_rules_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  analysis.py  base.py  garmin_sync_log.py  plan.py  plan_rule.py  prompt.py  route.py  rule.py  section.py  user.py  workout.py
backend/app/routes/: dashboard.py  export.py  garmin.py  gpx.py  health.py  (+5 more)
backend/scripts/: backup_restore.py  migration_checker.py  migration_rollback.py
backend/tests/: __init__.py  conftest.py
cmd/: main.go
fitness-tui/: go.mod  go.sum
fitness-tui/.kilocode/: mcp.json
fitness-tui/cmd/: main.go
frontend/: .dockerignore  Dockerfile  babel.config.js  jest.config.js  nginx.conf  package-lock.json  package.json
frontend/.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/pages/: Dashboard.jsx  PlanDetails.jsx  PlanGeneration.jsx  Plans.jsx  RoutesPage.jsx  Rules.jsx  Workouts.jsx  _app.js  index.js
frontend/src/: App.jsx
internal/analysis/: client.go
internal/circuitbreaker/: circuitbreaker.go
internal/config/: config.go
internal/garmin/: auth.go  client_mock.go  errors.go  logger.go
internal/storage/: activities.go
internal/tui/: app.go
internal/types/: downsample.go
tui/: __init__.py
tui/services/: __init__.py  dashboard_service.py  plan_service.py  route_service.py  rule_service.py  workout_service.py
tui/views/: __init__.py  dashboard.py  plans.py  routes.py  rules.py  test_view.py  workouts.py
~/.fitness-tui/: config.yaml
(+195 files in other folders)
